//
//  Constants.swift
//  OMDb Movie Search
//
//  Created by Rajeev Bhatia on 27/01/18.
//  Copyright © 2018 rajeev. All rights reserved.
//

import Foundation

struct Constants {

    static let placeholderPosterURLString = "http://baltimoresportsandlife.com/wp-content/uploads/2016/07/Movies.jpg"

}

struct OMSStrings {
    
    static let noSearchTermTitle = "Invalid search term"
    static let noSearchTermMessage = "Please enter a non empty search term!"
    
    static let noResultsFoundTitle = "No results found"
    static let noResultsFoundMessage = "Please enter a different search term"
    
    static let couldNotLoadDetailsTitle = "Could not load details"
    static let couldNotLoadDetailsMessage = "Please try again later"
    
}
